syntax = "proto3";

package user_rpc;

message userInfo {
  int64 user_id = 1;
  string access_token = 2;
  string avatar = 3;
  int64 create_time_unix = 4;
}

message getUserReq {
  int64 user_id = 1;
}

message getUserRes {
  userInfo user = 1;
}

message addUserReq {
  string avatar = 1;
}

message addUserRes {
  userInfo user = 1;
}

message guestInfo {
  string guest_id = 1;
  string guest_name = 2;
  string platform = 3;
  string android_id = 4;
  string app_version = 5;
  string country = 6;
  string imei = 7;
  string channel = 8;
  string campaign_id = 9;
  string user_channel = 10;
}

message guestInitReq {
  string guest_id = 1;
  string platform = 2;
  string android_id = 3;
  string app_version = 4;
  string country = 5;
  string imei = 6;
  string channel = 7;
  string campaign_id = 8;
  string user_channel = 9;
}

message guestInitRes{
  guestInfo guest = 1;
}

service userRpc {
  rpc getUser(getUserReq) returns(getUserRes);
  rpc addUser(addUserReq) returns(addUserRes);
  rpc guestInit(guestInitReq) returns (guestInitRes);
}


